--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-  --bg-gradient-start: #2e003e; 
-  --bg-gradient-end: #150020;
+  --bg-gradient-center: #a77a27;
+  --bg-gradient-edge: #cc9e49;
   --secondary-bg: #2b2b2b;
   --primary-text: #ffffff;
   --accent-color: #ffc600;
@@ -18,7 +18,7 @@
 
 body {
   font-family: var(--font-family);
-  background: linear-gradient(to bottom, var(--bg-gradient-start), var(--bg-gradient-end));
+  background: radial-gradient(circle at center, var(--bg-gradient-center) 50%, var(--bg-gradient-edge) 100%);
   color: var(--primary-text);
   display: flex;
   flex-direction: column;
@@ -30,19 +30,26 @@ body {
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  background-color: var(--secondary-bg);
+  background-color: #000000a2;
   box-shadow: 0 2px 4px rgba(0,0,0,0.5);
 }
 
 .logo-placeholder {
   width: 50px;
   height: 50px;
-  margin-right: 15px;
+  margin-right: 10px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 8px;
+  justify-content: center;
   overflow: hidden;
+}
+
+.logo-placeholder img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  object-position: center;
+  display: block;
 }
 
 .header h1 {
@@ -303,6 +310,13 @@ body {
 
   .wheel-frame-container {
     width: 100%;
+    max-width: none;
+    aspect-ratio: 1 / 1;
+  }
+
+  #wheelCanvas {
+    width: 100% !important;
+    height: auto !important;
   }
 
   .counter-row {
